force-app/main/default/objects/Product2/fields/Performance__c.field-meta.xml
<CustomField>
    <fullName>Performance__c</fullName>
    <description>Engine performance in PS</description>
    <inlineHelpText>Engine performance in PS</inlineHelpText>
    <label>Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>