force-app/main/default/objects/Product2/fields/Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Tonnage__c</fullName>
    <description>tons of tonnage</description>
    <inlineHelpText>tons of tonnage</inlineHelpText>
    <label>Tonnage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>