force-app/main/default/objects/Product2/validationRules/Product_ServiceWithParentProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_ServiceWithParentProduct</fullName>
    <active>true</active>
    <description>Ensure service products have parent product populated</description>
    <errorConditionFormula>AND(  RecordType.DeveloperName = &#39;Service&#39;,  
      ParentProduct__c = null)</errorConditionFormula>
    <errorMessage>Please insert the parent product.</errorMessage>
</ValidationRule>