force-app/main/default/objects/Product2/listViews/All_Trucks.listView-meta.xml
<ListView>
    <fullName>All_Trucks</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Truck</value>
    </filters>
    <label>All Trucks</label>
</ListView>